WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114544
Block freeing thread should call Region::destroy instead of delete
https://bugs.webkit.org/show_bug.cgi?id=114544
Summary
Block freeing thread should call Region::destroy instead of delete
Mark Hahnenberg
Reported
2013-04-12 16:19:25 PDT
Since Region doesn't have a virtual destructor, calling delete will not properly clean up all of the state of the Region. We should call destroy() instead.
Attachments
Patch
(1.48 KB, patch)
2013-04-12 16:23 PDT
,
Mark Hahnenberg
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2013-04-12 16:23:43 PDT
Created
attachment 197907
[details]
Patch
Mark Hahnenberg
Comment 2
2013-04-12 16:41:52 PDT
Committed
r148314
: <
http://trac.webkit.org/changeset/148314
>
Mark Hahnenberg
Comment 3
2013-04-12 16:43:48 PDT
<
rdar://problem/13260356
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug