Block freeing thread should call Region::destroy instead of delete https://bugs.webkit.org/show_bug.cgi?id=114544

Reviewed by Oliver Hunt.

Since Region doesn't have a virtual destructor, calling delete will not properly clean up all of
the state of the Region. We should call destroy() instead.

* heap/BlockAllocator.cpp:
(JSC::BlockAllocator::releaseFreeRegions):
(JSC::BlockAllocator::blockFreeingThreadMain):


Canonical link: https://commits.webkit.org/132923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148314 268f45cc-cd09-0410-ab3c-d52691b4dbfc